--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          href="/Medimed.com-logo-removebg.png"
       />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Medimed.com - Indian Online Pharmacy</title>
+      <title>Nivedita Medical - Indian Online Pharmacy</title>
    </head>
    <body>
       <div id="root"></div>
